--- a/src/main/resources/templates/vendas/form.html
+++ b/src/main/resources/templates/vendas/form.html
@@ -30,21 +30,31 @@
                 <input type="hidden" th:field="*{id}"/>
 
                 <div class="row mb-3">
-                    <div class="col-sm-2">
-                        <input type="number" min="0.01" step="0.01" class="form-control" placeholder="Qtde"
-                               th:field="*{quantidade}" required autofocus/>
+                    <div class="col-sm-9">
+                        <div class="form-floating">
+                            <select id="produto" class="form-select" th:name="produto.id">
+                                <option th:each="p : ${produtos}" th:value="${p.id}" th:text="${p.descricao}">
+                            </select>
+                            <label for="produto">Produto</label>
+                        </div>
                     </div>
 
-                    <div class="col-sm-8">
-                        <select id="produto" class="form-control" th:name="produto.id">
-                            <option th:each="p : ${produtos}" th:value="${p.id}" th:text="${p.descricao}">
-                        </select>
-                    </div>
-
-                    <div class="col-sm-2">
-                        <button type="submit" class="btn btn-outline-primary w-100" title="Adicionar ao carrinho">
-                            <i class="bi bi-cart-plus"></i>
-                        </button>
+                    <div class="col-sm-3">
+                        <div class="form-floating">
+                            <input id="quantidade"
+                                   autofocus
+                                   min="0.01"
+                                   step="0.01"
+                                   type="number"
+                                   placeholder="Qtde"
+                                   class="form-control"
+                                   th:field="*{quantidade}"
+                                   th:classappend="${#fields.hasErrors('quantidade') ? 'is-invalid' : ''}"/>
+                            <label for="quantidade">Quantidade</label>
+                            <div class="invalid-feedback"
+                                 th:errors="*{quantidade}"
+                                 th:if="${#fields.hasErrors('quantidade')}"></div>
+                        </div>
                     </div>
                 </div>
             </form>
@@ -77,9 +87,12 @@
             <form th:action="@{/vendas/create}" method="post">
                 <div class="row mb-3">
                     <div class="col-sm-12">
-                        <select id="cliente" class="form-control" th:name="cliente_id">
-                            <option th:each="c : ${clientes}" th:value="${c.id}" th:text="${c.nome}">
-                        </select>
+                        <div class="form-floating">
+                            <select id="cliente" class="form-select" th:name="cliente_id">
+                                <option th:each="c : ${clientes}" th:value="${c.id}" th:text="${c.nome}">
+                            </select>
+                            <label for="cliente">Cliente</label>
+                        </div>
                     </div>
                 </div>
 
