--- a/src/main/resources/templates/produtos/form.html
+++ b/src/main/resources/templates/produtos/form.html
@@ -28,27 +28,28 @@
             <form method="post" th:action="${produto.id == null} ? @{/produtos/create} : @{/produtos/update}"
                   th:object="${produto}">
                 <input type="hidden" id="id" name="id" th:field="*{id}" />
-                <div class="mb-3">
-                    <label for="descricao" class="form-label">Descrição</label>
+                <div class="form-floating mb-3">
                     <input type="text"
                            id="descricao"
                            name="descricao"
+                           placeholder="Descrição"
                            class="form-control"
                            th:field="*{descricao}"
                            th:classappend="${#fields.hasErrors('descricao') ? 'is-invalid' : ''}"/>
+                    <label for="descricao" class="form-label">Descrição</label>
                     <div class="invalid-feedback"
                          th:errors="*{descricao}"
                          th:if="${#fields.hasErrors('descricao')}"></div>
                 </div>
-                <div class="mb-3">
-                    <label for="valor" class="form-label">Valor</label>
-                    <input step="0.01"
-                           id="valor"
+                <div class="form-floating mb-3">
+                    <input id="valor"
                            name="valor"
                            type="number"
+                           placeholder="Valor"
                            th:field="*{valor}"
                            class="form-control"
                            th:classappend="${#fields.hasErrors('valor') ? 'is-invalid' : ''}"/>
+                    <label for="valor" class="form-label">Valor</label>
                     <div th:errors="*{valor}"
                          class="invalid-feedback"
                          th:if="${#fields.hasErrors('valor')}"></div>
